# SoftwareEvolutionPinot

./: OOMetrics_analysis.xlsx  README.md  pinot-refactored-v1-48%.cpa.hsp  pinot.cpa.hsp  pinot.cpa.hspx  pinot_refactored.csv  structure101.cpa.hsp
analysis/: OOMetrics_analysis.xlsx  README.md
build-tools/: script.sh
pinot/: Makefile  config.status
pinot/src/: Makefile  Makefile.am  Makefile.in  Print  ast.cpp  ast.h  body.cpp  bytecode.cpp  bytecode.h  case.cpp  class.cpp  class.h  code.cpp  config.h  control.cpp  control.h  decl.cpp  definite.cpp  depend.cpp  depend.h  diagnose.cpp  diagnose.h  double.cpp  dump.cpp  error.cpp  expr.cpp  gencode.java  incrmnt.cpp  init.cpp  java.g  javaact.cpp  jikes.cpp  jikesapi.cpp  long.cpp  lookup.cpp  lpginput.cpp  modifier.cpp  op.cpp  option.cpp  parser.cpp  (+16 more)
pinot/src/.deps/: ast.Po  body.Po  bytecode.Po  case.Po  class.Po  code.Po  control.Po  decl.Po  definite.Po  depend.Po  diagnose.Po  double.Po  dump.Po  error.Po  expr.Po  incrmnt.Po  init.Po  javaact.Po  jikes.Po  jikesapi.Po  long.Po  lookup.Po  lpginput.Po  modifier.Po  op.Po  option.Po  parser.Po  platform.Po  scanner.Po  script.sh  segment.Po  set.Po  stream.Po  symbol.Po  system.Po  tab.Po  unparse.Po  unzip.Po  zip.Po
pinot/src/Utility/: Assoc.h  ContainerType.h  Delegation.h  Env.h  Flatten.h  GenTable.h  MethodBodyTable.h  Snapshot.h  State.h  Table.h  Utility.h
pinot/src/astGeneration/: ast.cpp  ast.h  body.cpp  bytecode.cpp  bytecode.h  decl.cpp  definite.cpp  depend.cpp  depend.h  expr.cpp  incrmnt.cpp  init.cpp  lookup.cpp  parser.h  semantic.h  symbol.cpp  unparse.cpp
pinot/src/astGeneration/core/: AstLiterals.cpp  AstSwitchBlockStatement.cpp  AstSwitchBlockStatement.h  AstSwitchStatement.cpp  AstSwitchStatement.h  AstWhileStatement.cpp  AstWhileStatement.h  variableSymbolArray.cpp  variableSymbolArray.h
pinot/src/astGeneration/core/expression/: AstArrayCreationExpression.h  AstClassCreationExpression.cpp  AstClassCreationExpression.h
pinot/src/astGeneration/core/literals/: AstIntegerLiteral.cpp  AstIntegerLiteral.h  AstLongLiteral.cpp  AstLongLiteral.h
pinot/src/astGeneration/core/statement/: AstBreakStatement.cpp  AstBreakStatement.h  AstDoStatement.cpp  AstDoStatement.h  AstForStatement.h  AstForeachStatement.cpp  AstForeachStatement.h  AstLiterals.h  AstSwitchStatement.cpp  AstSwitchStatement.h  AstWhileStatement.cpp  AstWhileStatement.h  variableSymbolArray.cpp  variableSymbolArray.h
pinot/src/astGeneration/storage/: storagepool.h
pinot/src/ast_dump/: gof.cpp.ast
pinot/src/declarations/: access.h  case.cpp  case.h  code.cpp  code.h  control.h  double.h  long.h  lpginput.h  op.cpp  op.h  option.h  platform.h  scanner.h  segment.h  set.h  spell.h  stream.h  table.h  tuple.h
pinot/src/declarations/Utility/: Assoc.h  ContainerType.h  Delegation.h  Env.h  Flatten.h  GenTable.h  MethodBodyTable.h  Snapshot.h  State.h  Table.h  Utility.h
pinot/src/declarations/jikes/: error.h  jikes.cpp  jikesapi.cpp
pinot/src/declarations/patterns/: ChainAnalysis.h  ControlAnalysis.h  CreationAnalysis.h  FactoryAnalysis.h  FlyweightAnalysis.h  SingletonAnalysis.h  chainanalysis.cpp  controlanalysis.cpp  creationanalysis.cpp  factoryanalysis.cpp  flyweightanalysis.cpp  singletonanalysis.cpp
pinot/src/declarations/platform/: double.cpp  platform.h
pinot/src/declarations/symbol/: lookup.h  symbol.h
pinot/src/orchestration/: class.cpp  class.h  control.cpp  diagnose.cpp  diagnose.h  dump.cpp  error.cpp  modifier.cpp  option.cpp  parser.cpp  scanner.cpp  stream.cpp  system.cpp  tab.h  unzip.h  zip.cpp  zip.h
pinot/src/patterns/: ChainAnalysis.h  ControlAnalysis.h  CreationAnalysis.h  FactoryAnalysis.h  FlyweightAnalysis.h  SingletonAnalysis.h  chainanalysis.cpp  controlanalysis.cpp  creationanalysis.cpp  factoryanalysis.cpp  flyweightanalysis.cpp  singletonanalysis.cpp
structure-101/: Pinot.cpa  Pinotv1.cpa  Pinotv1.cpax  pinot-fat-files-refactoring-plan.cpa.hsp  pinot.cpa.hsp  (+3 more)
(+401 files in other folders)
